[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Scripts/DayNightCycle.gd" type="Script" id=1]

[sub_resource type="Animation" id=30]
length = 24.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.1, 5.1, 7.1, 8.2, 16.1, 18, 21.1, 24 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.176471, 0.164706, 0.235294, 1 ), Color( 0.376471, 0.352941, 0.505882, 1 ), Color( 0.5, 0.49875, 0.485, 1 ), Color( 0.74, 0.73926, 0.6956, 1 ), Color( 1, 0.996078, 0.94902, 1 ), Color( 1, 0.996078, 0.94902, 1 ), Color( 0.611765, 0.564706, 0.415686, 1 ), Color( 0.364706, 0.392157, 0.486275, 1 ), Color( 0.133333, 0.12549, 0.176471, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Fade_to_Black"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.133333, 0.12549, 0.176471, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.176471, 0.164706, 0.235294, 1 ) ]
}

[node name="DayNightCycle" type="CanvasModulate"]
visible = false
color = Color( 0.176471, 0.164706, 0.235294, 1 )
script = ExtResource( 1 )

[node name="ClockTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DayNightCycle = SubResource( 30 )
anims/Fade_to_Black = SubResource( 3 )
anims/RESET = SubResource( 31 )

[connection signal="timeout" from="ClockTimer" to="." method="_on_ClockTimer_timeout"]
